# selenide-lang

./: Cargo.toml  README.md
crates/se-compiler/: Cargo.toml
crates/se-compiler/src/: injector.rs  lexer.rs  lib.rs  parser.rs
crates/se-compiler/src/presets/: token.rs
crates/se-opcodes/: Cargo.toml
crates/se-opcodes/src/: codes.rs  errors.rs  lib.rs  registry.rs
crates/se-vm/: Cargo.toml
examples/create_token/: main.se  main.seh
selc/: Cargo.toml
